--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -145,6 +145,26 @@
           <p>カウンセラーが直接ご家庭まで訪問いたしますので、必要事項を記入の上、送信ボタンを押してください。</p>
           <!-- TODO フォームを自分で作ってみる -->
           <!-- 必要なフォーマットを自分で考えてつくってみましょう。  -->
+          <div class="container">
+            <form>
+              <div class="form-group">
+                <label for="name">名前</label>
+                <input type="text" name="name" class="form-control">
+                <label for="trouble">お悩み内容</label>
+                <textarea name="description" class="form-control"></textarea>
+                <label for="sleeptime">睡眠時間</label>
+                <select name="selection" class="form-control">
+                  <option>ほとんど寝ない</option>
+                  <option>仕事中も頻繁に寝てる</option>
+                </select>
+              </div>
+              <input type="button" class="btn btn-primary btn-lg btn-block" value="送信">
+            </form>
+          </div>
+        </div>
+      </div>
+
+
         </div>
       </div>
 
@@ -163,28 +183,14 @@
           <!-- TODO 相談に関する料金表を作ってみましょう。-->
           <!-- 必要な表の項目を自分で考えてみましょう。 -->
           <div class="container">
-      <form>
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" name="name" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="description">Description</label>
-          <textarea name="description" class="form-control"></textarea>
-        </div>
-        <div class="form-group">
-          <label for="selection">Selection</label>
-          <select name="selection" class="form-control">
-            <option>selectA</option>
-            <option>selectB</option>
-          </select>
-        </div>
-        <input type="button" class="btn btn-primary" value="OK">
-      </form>
+            <table class="table table-striped">
+            <tr><th>時間</th><th>金額</th></tr>
+            <tr><td>1時間</td><td>¥10,000</td><</tr>
+            <tr><td>1日間</td><td>¥50,000</td></tr>
+            <tr><td>1週間</td><td>¥100,000</td></tr>
+          </table>
         </div>
       </div>
-
-
     </div>
 
     <footer>
